--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>TrailLog</title>
+    <title>The Compass Book</title>
   </head>
 
   <body>
-    <h1><a href="/">TrailLog</a></h1>
+    <h1><a href="/">The Compass Book</a></h1>
     <hr>
 
     {% block content %}{% endblock %}
