--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,13 @@
   </head>
 
   <body>
-    <h1><a href="/">The Compass Book</a></h1>
+
+    <h1 style="text-align: center; margin-top: 20px;">
+      <a href="/" style="text-decoration: none; color: brown;">
+        The Compass Book
+      </a>
+    </h1>
+
     <hr>
 
     {% block content %}{% endblock %}
