--- a/templates/new_trip.html
+++ b/templates/new_trip.html
@@ -5,6 +5,12 @@
 
   <form method="post">
     <p>
+      <label>Date:<br>
+        <input type="date" name="date" required>
+      </label>
+    </p>
+
+    <p>
       <label>Start place:<br>
         <input type="text" name="start_place" required>
       </label>
@@ -18,13 +24,13 @@
 
     <p>
       <label>Start time:<br>
-        <input type="datetime-local" name="start_time">
+        <input type="time" name="start_time">
       </label>
     </p>
 
     <p>
       <label>End time:<br>
-        <input type="datetime-local" name="end_time">
+        <input type="time" name="end_time">
       </label>
     </p>
 
